package personalRobotics;

enum AngleUnits
{
	RADIANS = 1;
	DEGREES = 2;
}